--- a/trainings/instant-insights/index.html
+++ b/trainings/instant-insights/index.html
@@ -3,48 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Course Catalog - Instant Insights</title>
+    <link rel="icon" href="https://cdn.brand.illinois.edu/favicon.ico">
+    <link rel="apple-touch-icon" href="https://cdn.brand.illinois.edu/touch-icon-40x40.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://cdn.brand.illinois.edu/touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="https://cdn.brand.illinois.edu/touch-icon-167x167.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.brand.illinois.edu/touch-icon-180x180.png">
+    <link rel="dns-prefetch" href="//cdn.toolkit.illinois.edu">
+    <link rel="dns-prefetch" href="//cdn.disability.illinois.edu">
+    <link rel="stylesheet" href="//cdn.toolkit.illinois.edu/3/toolkit.css">
     <link rel="stylesheet" href="./style.css" />
+    <script type="module" src="//cdn.toolkit.illinois.edu/3/toolkit.js"></script>
+    <title>Course Catalog - Instant Insights</title>
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <h1 class="logo">Instant Insights</h1>
-      </div>
-    </header>
+    <ilw-page>
+      <ilw-header slot="header">
+          <a slot="site-name" href="https://humanresources.illinois.edu/">Illinois Human Resources</a>
+      </ilw-header>
+      <header class="header">
+        <div class="container">
+          <h1 class="logo">Instant Insights</h1>
+        </div>
+      </header>
 
-    <main class="main">
-      <div class="container">
-        <section class="hero">
-          <h1 class="hero-title">Course Catalog</h1>
-          <p class="hero-description">
-            Discover curated employee modules to help you address common workplace challenges with confidence.
-          </p>
+      <main class="main">
+        <div class="container">
+          <section class="hero">
+            <h1 class="hero-title">Course Catalog</h1>
+            <p class="hero-description">
+              Discover curated employee modules to help you address common workplace challenges with confidence.
+            </p>
 
-          <!--<div class="action-buttons">
-            <a href="#courses" class="btn btn-primary browse-courses-btn">Browse courses</a>
-          </div>-->
-        </section>
+            <!--<div class="action-buttons">
+              <a href="#courses" class="btn btn-primary browse-courses-btn">Browse courses</a>
+            </div>-->
+          </section>
 
-       <section class="search-section">
-          <div class="search-container">
-            <label for="course-search" class="sr-only">Search courses: </label>
-            <input
-              type="text"
-              class="search-input"
-              placeholder="Search courses by title or description"
-              aria-label="Search courses"
-            />
-            <button class="btn btn-primary" aria-label="Filter courses">All</button>
-          </div>
-        </section>
+        <section class="search-section">
+            <div class="search-container">
+              <label for="course-search" class="sr-only">Search courses: </label>
+              <input
+                type="text"
+                class="search-input"
+                placeholder="Search courses by title or description"
+                aria-label="Search courses"
+              />
+              <button class="btn btn-primary" aria-label="Filter courses">All</button>
+            </div>
+          </section>
 
-        <section class="courses-section">
-          <div class="course-grid"></div>
-        </section>
-      </div>
-    </main>
-    <script src="./data.js"></script>
-    <script src="./app.js"></script>
+          <section class="courses-section">
+            <div class="course-grid"></div>
+          </section>
+        </div>
+      </main>
+      <ilw-footer slot="footer">
+          
+      </ilw-footer>
+      <script src="./data.js"></script>
+      <script src="./app.js"></script>
+    </ilw-page>
   </body>
 </html>
