style: update footer styling in the ii and gotg training html

--- a/trainings/instant-insights/index.html
+++ b/trainings/instant-insights/index.html
@@ -143,7 +143,8 @@
         <ilw-columns>
           <ilw-content theme="gray">
             <p class="ilw-heading">Resources</p>
-            <ul>
+            <hr style="width: 80%; height:2px; border-width:0; color:#13294b; background-color:#13294b; margin-top: 15px;">
+            <ul style="list-style-type: none; color: #13294b;">
               <li>
                 <a href="https://humanresources.illinois.edu/about/">About</a>
               </li>
@@ -164,7 +165,8 @@
           </ilw-content>
           <ilw-content theme="gray">
             <p class="ilw-heading">Connect</p>
-            <ul>
+            <hr style="width: 80%; height:2px; border-width:0; color:#13294b; background-color:#13294b; margin-top: 15px;">
+            <ul style="list-style-type: none; color: #13294b;">
               <li>
                 <a href="https://humanresources.illinois.edu/job-seekers/"
                   >Are you a Job Seeker?</a
