--- a/trainings/guidance-on-the-go/index.html
+++ b/trainings/guidance-on-the-go/index.html
@@ -146,7 +146,8 @@
         <ilw-columns>
           <ilw-content theme="gray">
             <p class="ilw-heading">Resources</p>
-            <ul>
+            <hr style="width: 80%; height:2px; border-width:0; color:#13294b; background-color:#13294b; margin-top: 15px;">
+            <ul style="list-style-type: none; color: #13294b;">
               <li><a href="https://humanresources.illinois.edu/about/">About</a></li>
               <li><a href="https://humanresources.illinois.edu/campus-holiday-schedule/">Campus Holiday Schedule</a></li>
               <li><a href="https://youtu.be/k_65146S1oE">Site navigation help</a></li>
@@ -156,7 +157,8 @@
           </ilw-content>
           <ilw-content theme="gray">
             <p class="ilw-heading">Connect</p>
-            <ul>
+            <hr style="width: 80%; height:2px; border-width:0; color:#13294b; background-color:#13294b; margin-top: 15px;">
+            <ul style="list-style-type: none; color: #13294b;">
               <li><a href="https://humanresources.illinois.edu/job-seekers/">Are you a Job Seeker?</a></li>
               <li><a href="https://humanresources.illinois.edu/hr-contacts/">Who is my unit HR Contact</a></li>
               <li><a href="https://humanresources.illinois.edu/about/contact-us/">General HR Questions?</a></li>
