--- a/trainings/guidance-on-the-go/index.html
+++ b/trainings/guidance-on-the-go/index.html
@@ -147,7 +147,7 @@
           <ilw-content theme="gray">
             <p class="ilw-heading">Resources</p>
             <hr style="width: 80%; height:2px; border-width:0; color:#13294b; background-color:#13294b; margin-top: 15px;">
-            <ul style="list-style-type: none; color: #13294b;">
+            <ul style="list-style-type: none;">
               <li><a href="https://humanresources.illinois.edu/about/">About</a></li>
               <li><a href="https://humanresources.illinois.edu/campus-holiday-schedule/">Campus Holiday Schedule</a></li>
               <li><a href="https://youtu.be/k_65146S1oE">Site navigation help</a></li>
@@ -158,7 +158,7 @@
           <ilw-content theme="gray">
             <p class="ilw-heading">Connect</p>
             <hr style="width: 80%; height:2px; border-width:0; color:#13294b; background-color:#13294b; margin-top: 15px;">
-            <ul style="list-style-type: none; color: #13294b;">
+            <ul style="list-style-type: none;">
               <li><a href="https://humanresources.illinois.edu/job-seekers/">Are you a Job Seeker?</a></li>
               <li><a href="https://humanresources.illinois.edu/hr-contacts/">Who is my unit HR Contact</a></li>
               <li><a href="https://humanresources.illinois.edu/about/contact-us/">General HR Questions?</a></li>
