--- a/trainings/instant-insights/index.html
+++ b/trainings/instant-insights/index.html
@@ -144,7 +144,7 @@
           <ilw-content theme="gray">
             <p class="ilw-heading">Resources</p>
             <hr style="width: 80%; height:2px; border-width:0; color:#13294b; background-color:#13294b; margin-top: 15px;">
-            <ul style="list-style-type: none; color: #13294b;">
+            <ul style="list-style-type: none;">
               <li>
                 <a href="https://humanresources.illinois.edu/about/">About</a>
               </li>
@@ -166,7 +166,7 @@
           <ilw-content theme="gray">
             <p class="ilw-heading">Connect</p>
             <hr style="width: 80%; height:2px; border-width:0; color:#13294b; background-color:#13294b; margin-top: 15px;">
-            <ul style="list-style-type: none; color: #13294b;">
+            <ul style="list-style-type: none;">
               <li>
                 <a href="https://humanresources.illinois.edu/job-seekers/"
                   >Are you a Job Seeker?</a
