--- a/holiday-card.html
+++ b/holiday-card.html
@@ -194,7 +194,7 @@
             <div class="inside-grid">
               <div class="inside-left">
                 <div>
-                  <div class="title">Season’s greetings from Illinois Human Resources.</div>
+                  <div class="title">Season’s Greetings from Illinois Human Resources.</div>
                   <div class="msg">As the year winds down, we want to thank our campus colleagues for the work you do every day to support the University of Illinois community. Your dedication, service, and collaboration make this place stronger.
 
 Wishing you a restful season, moments that recharge you, and a bright start to the new year.
