--- a/holiday-card.html
+++ b/holiday-card.html
@@ -199,8 +199,8 @@
 
 Wishing you a restful season, moments that recharge you, and a bright start to the new year.
 
-Illinois Human Resources
-Thank you for all you do at Illinois.</div>
+Thank you for all you do at Illinois.
+Illinois Human Resources</div>
                 </div>
                 <div class="sig">Illinois Human Resources</div>
               </div>
