--- a/holiday-card.html
+++ b/holiday-card.html
@@ -174,8 +174,8 @@
           <div class="mail-body"></div>
           <div class="lid" id="lid"></div>
           <div class="face">
-            <div class="from">FROM: Illinois Human Resources</div>
-            <div class="to">TO: You</div>
+            <div class="from">From: Illinois Human Resources</div>
+            <div class="to">To: Our Campus Community</div>
             <div class="stamp" aria-hidden="true">
               <svg viewBox="0 0 72 90" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Snowflake stamp">
                 <rect x="2" y="2" width="68" height="86" rx="6" class="ring"/>
