Update aria-label for envelope to improve accessibility

--- a/holiday-card.html
+++ b/holiday-card.html
@@ -170,7 +170,7 @@
     <div class="board">
       <div class="envelope-scene" role="group" aria-label="Envelope and card">
         <!-- ENVELOPE -->
-        <div class="envelope" id="envelope" aria-label="Open envelope">
+        <div class="envelope" id="envelope" aria-label="Click to Open envelope">
           <div class="mail-body"></div>
           <div class="lid" id="lid"></div>
           <div class="face">
