Update CTA text from 'Open envelope' to 'Click to Open envelope'

--- a/holiday-card.html
+++ b/holiday-card.html
@@ -185,7 +185,7 @@
               </svg>
             </div>
           </div>
-          <div class="cta-text" id="miniNote">Open envelope</div>
+          <div class="cta-text" id="miniNote">Click to Open envelope</div>
         </div>
 
         <!-- CARD -->
