Change title style for Shari Mickey-Boggs

--- a/apps/holiday-card/index.html
+++ b/apps/holiday-card/index.html
@@ -75,7 +75,7 @@ As the year winds down, we want to thank our campus colleagues for the work you 
   Thank you for all you do at Illinois.
 <br><br>
 <strong>Shari Mickey-Boggs</strong><br>
-Senior Associate Chancellor for Human Resources<br>
+<em>Senior Associate Chancellor for Human Resources</em>
                     </p>
                     </div>
                   <div>
