Fix formatting of signature in holiday card

--- a/apps/holiday-card/index.html
+++ b/apps/holiday-card/index.html
@@ -74,7 +74,7 @@ As the year winds down, we want to thank our campus colleagues for the work you 
 Wishing you a restful season, moments that recharge you, and a bright start to the new year.<br>
 Thank you for all you do at Illinois.
 <strong>Shari Mickey-Boggs</strong>
-Senior Associate Chancellor for Human Resources<br>
+Senior Associate Chancellor for Human Resources
                     </p>
                     </div>
                   <div>
