--- a/apps/holiday-card/index.html
+++ b/apps/holiday-card/index.html
@@ -72,7 +72,7 @@ aria-labelledby="cardTitle"
 <p class="msg" id="cardMessage">
 As the year winds down, we want to thank our campus colleagues for the work you do every day to support the University of Illinois community. Your dedication, service, and collaboration make this place stronger.<br>
 Wishing you a restful season, moments that recharge you, and a bright start to the new year.<br>
-Thank you for all you do at Illinois.
+Thank you for all you do at Illinois.<br>
 <strong>Shari Mickey-Boggs</strong>
 Senior Associate Chancellor for Human Resources
                     </p>
